<resources>
    <string name="app_name">Yeltzland</string>
    <string name="service_name">Listen for notifications to update widget, latest score</string>

    <string name="forum_name">Yeltz Forum</string>
    <string name="official_site">Official Site</string>
    <string name="yeltz_tv">Yeltz TV</string>
    <string name="twitter">Twitter</string>
    <string name="more">More...</string>

    <string name="stourbridgetowntitle">Really?</string>
    <string name="stourbridgetownmessage">Computer says no</string>
    <string name="webpage_error">No connection right now</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_settings">Settings</string>
    <string name="title_fixture_list">Fixture List</string>
    <string name="title_latest_score">Latest Score</string>
    <string name="pref_gametimetweets">Game time tweets</string>
    <string name="pref_gametimetweets_subtitle">Notifications during the match</string>
    <string name="title_activity_locations_maps">Where\'s The Ground</string>

    <string name="widget_header">HTFC results/fixtures</string>

    <string name="yeltz_team_name">Yeltz</string>
    <string name="best_guess">*Best guess from Twitter</string>

</resources>
